deploy: 3a49f0eb8e41964766591fb5b8f12b540d9d346a

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "DCS",
   "short_name": "DCS",
-  "theme_color": "#b82d1b",
+  "theme_color": "#101828",
   "background_color": "#101828",
   "display": "standalone",
   "scope": "/",
