deploy: b40f4d186b0e536b14a3b2ac3139db2615c5d847

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "DCS",
   "short_name": "DCS",
-  "theme_color": "#101828",
-  "background_color": "#101828",
+  "theme_color": "#d6d6db",
+  "background_color": "#d6d6db",
   "display": "standalone",
   "scope": "/",
   "start_url": "/dcs/",
